--- a/src/assets/sass/now-ui-kit/_variables.scss
+++ b/src/assets/sass/now-ui-kit/_variables.scss
@@ -8,7 +8,7 @@ $none:                       0   !default;
 $border-thin:                1px !default;
 $border-thick:               2px !default;
 
-$white-color:                #FFFFFF !default;
+$white-color:                #000 !default;
 $white-bg:                   #FFFFFF !default;
 $orange-bg:                  #e95e38 !default;
 
@@ -22,7 +22,8 @@ $black-hr:                   #444444 !default;
 
 $light-gray:                 #E3E3E3 !default;
 $medium-gray:                #DDDDDD !default;
-$dark-gray:                  #9A9A9A !default;
+// $dark-gray:                  #9A9A9A !default;
+$dark-gray:                  #fff !default;
 
 $opacity-gray-3:             rgba(222,222,222, .3) !default;
 $opacity-gray-5:             rgba(222,222,222, .5) !default;
@@ -46,7 +47,8 @@ $default-color:              #888888 !default;
 $default-states-color:       lighten($default-color, 6%) !default;
 $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 
-$primary-color:              #f96332 !default;
+$primary-color:              #000 !default;
+// $primary-color:              #f96332 !default;
 $primary-states-color:       lighten($primary-color, 6%) !default;
 $primary-color-opacity:      rgba(249, 99, 50, .3) !default;
 $primary-color-alert:        rgba(249, 99, 50, .8) !default;
