--- a/src/assets/sass/now-ui-kit/_typography.scss
+++ b/src/assets/sass/now-ui-kit/_typography.scss
@@ -39,6 +39,7 @@ h3, .h3{
     font-size: $font-size-h3;
     margin-bottom: $margin-base-vertical * 2;
     line-height: 1.4em;
+    color: #fff;
 }
 h4, .h4{
     font-size: $font-size-h4;
@@ -63,6 +64,7 @@ h6, .h6{
 }
 p{
     line-height: 1.61em;
+    color: #fff;
 
     .description &,
     &.description{
@@ -72,6 +74,7 @@ p{
 
 .title{
     font-weight: $font-weight-bold;
+    color: #fff;
 
     &.title-up{
         text-transform: uppercase;
