--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -7,13 +7,13 @@
             <div class="content-center brand">
                 <img class="n-logo" src="assets/img/now-logo.png" alt="">
                 <!-- <h1 class="h1-seo">Now UI Kit.</h1> -->
-                <h2>FIND THE SPEED TO SUCCEED</h2>
+                <h1>The  future  of speed</h1>
             </div>
-            <h6 class="category category-absolute">Designed by
-                <a href="https://invisionapp.com/" target="_blank">
+            <h6 class=" category-absolute">Designed by
+                <a href="" target="_blank">
                     <img src="assets/img/invision-white-slim.png" class="invision-logo" />
                 </a>. Coded by
-                <a href="https://www.creative-tim.com" target="_blank">
+                <a href="" target="_blank">
                     <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo" />
                 </a>.</h6>
         </div>
