--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -19,8 +19,9 @@
            </div>
          </div>
       </div>
+      <!-- ngbTooltip="Designed by Invision. Coded by Creative Tim" -->
         <div class="navbar-translate">
-            <a class="navbar-brand" [routerLink]="['/index']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+            <a class="navbar-brand" [routerLink]="['/index']" placement="bottom" >
               Claggett Power Skating
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
@@ -33,18 +34,29 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                   <a class="nav-link" href="https://www.creative-tim.com/product/claggett-power-skating" target="_blank">
-                      <i class="now-ui-icons arrows-1_cloud-download-93"></i>
-                      <p>Download</p>
+                      
+                      <p>HOME</p>
                   </a>
               </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://creativetimofficial.github.io/claggett-power-skating/documentation/tutorial" target="_blank">
-                      <i class="now-ui-icons files_paper"></i>
-                      <p>Documentation</p>
+                      
+                      <p>LESSONS</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://creativetimofficial.github.io/claggett-power-skating/documentation/tutorial" target="_blank">
+                      
+                      <p>ABOUT</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://creativetimofficial.github.io/claggett-power-skating/documentation/tutorial" target="_blank">
+                      <p>CONTACT</p>
                     </a>
                 </li>
                
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
                     <i class="fab fa-twitter"></i>
                     <p class="d-lg-none d-xl-none">Twitter</p>
@@ -61,7 +73,7 @@
                     <i class="fab fa-instagram"></i>
                     <p class="d-lg-none d-xl-none">Instagram</p>
                   </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
