--- a/src/assets/sass/now-ui-kit/mixins/_buttons.scss
+++ b/src/assets/sass/now-ui-kit/mixins/_buttons.scss
@@ -55,12 +55,12 @@
         }
 
         &.btn-primary{
-            color: $primary-color;
+            color: #fff;
 
             &:hover,
             &:focus,
             &:active{
-                color: $primary-states-color;
+                color: white;
             }
         }
 
