--- a/src/assets/sass/now-ui-kit/mixins/_navbar.scss
+++ b/src/assets/sass/now-ui-kit/mixins/_navbar.scss
@@ -187,7 +187,7 @@
                 margin-top: 0.3125rem;
 
                 &:not(.btn){
-                    color: $white-color;
+                    color: #fff;
                 }
             }
         }
