--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,26 +1,38 @@
 <div class="wrapper">
     <div class="page-header clear-filter" filter-color="orange">
-      <div class="page-header-image rellax-header" data-rellax-speed="-7" style="background-image: url('assets/img/header.jpg');">
-  
-      </div>
+        <div class="page-header-image rellax-header" data-rellax-speed="-7"
+            style="background-image: url('assets/img/wallpaper1.jpg');">
+
+        </div>
         <div class="container">
             <div class="content-center brand">
-                <img class="n-logo" src="assets/img/now-logo.png" alt="">
+                <!-- <img class="n-logo" src="assets/img/now-logo.png" alt=""> -->
                 <!-- <h1 class="h1-seo">Now UI Kit.</h1> -->
-                <h1>The  future  of speed</h1>
+                <h1>The future of speed</h1>
             </div>
-            <h6 class=" category-absolute">Designed by
+            <!-- <h6 class=" category-absolute">Designed by
                 <a href="" target="_blank">
                     <img src="assets/img/invision-white-slim.png" class="invision-logo" />
                 </a>. Coded by
                 <a href="" target="_blank">
                     <img src="assets/img/creative-tim-white-slim2.png" class="creative-tim-logo" />
-                </a>.</h6>
+                </a>.</h6> -->
         </div>
     </div>
-  
+
     <div class="main">
-      <div class="section section-images">
+
+        <div class="row m-0">
+            <div class="col-md-8 ml-auto mr-auto text-center"  style="margin-top: 3rem;">
+                <h2 class="title">ENGINEERED SPEED</h2>
+                <h5 class="description">
+                    Balance, movement, muscular strength, coordination and agility through specific biomechanics
+                    patterns creating the perfect skating technique.
+                </h5>
+            </div>
+        </div>
+
+        <!-- <div class="section section-images">
           <div class="container">
               <div class="row">
                   <div class="col-md-12">
@@ -36,15 +48,15 @@
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
         <!-- <app-basicelements></app-basicelements>
         <app-navigation></app-navigation> -->
-        <div class="section section-tabs">
+        <!-- <div class="section section-tabs">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 ml-auto col-xl-6 mr-auto">
                         <p class="category">Tabs with Icons on Card</p>
-                        <!-- Nav tabs -->
+                    
   
                         <div class="card">
                           <div class="nav-tabs-navigation">
@@ -91,7 +103,6 @@
                     </div>
                     <div class="col-md-10 ml-auto col-xl-6 mr-auto">
                         <p class="category">Tabs with Background on Card</p>
-                        <!-- Tabs with Background on Card -->
                         <div class="card">
                           <div class="nav-tabs-navigation" data-tabs-color="orange">
                               <div class="nav-tabs-wrapper">
@@ -122,11 +133,10 @@
                               </div>
                           </div>
                         </div>
-                        <!-- End Tabs on plain Card -->
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- <div class="section section-pagination">
             <div class="container">
                 <div class="row">
@@ -191,7 +201,7 @@
                 </div>
             </div>
         </div> -->
-  
+
         <!-- <div class="section" id="notifications">
             <div class="container">
               <h4>Notifications</h4>
@@ -266,41 +276,42 @@
                     </div>
             
             </div>
-  
-            <div class="section" id="carousel">
-                <div class="container">
-                    <div class="title">
+             -->
+
+        <div class="section" id="carousel">
+            <div class="container">
+                <!-- <div class="title">
                         <h4>Carousel</h4>
-                    </div>
-                    <div class="row justify-content-center">
-                        <div class="col-8">
-                          <ngb-carousel>
-                              <ng-template ngbSlide>
-                                <img class="d-block" src="assets/img/bg1.jpg" alt="First slide">
-                                <div class="carousel-caption d-none d-md-block">
+                    </div> -->
+                <div class="row justify-content-center">
+                    <div class="col-12">
+                        <ngb-carousel>
+                            <ng-template ngbSlide>
+                                <img class="d-block" src="assets/img/wallpaper.jpg" alt="First slide">
+                                <!-- <div class="carousel-caption d-none d-md-block">
                                     <h5>Nature, United States</h5>
-                                </div>
-                              </ng-template>
-                              <ng-template ngbSlide>
-                                <img class="d-block" src="assets/img/bg3.jpg" alt="Second slide">
-                                <div class="carousel-caption d-none d-md-block">
+                                </div> -->
+                            </ng-template>
+                            <ng-template ngbSlide>
+                                <img class="d-block" src="assets/img/wallpaper1.jpg" alt="Second slide">
+                                <!-- <div class="carousel-caption d-none d-md-block">
                                     <h5>Somewhere Beyond, United States</h5>
-                                </div>
-                              </ng-template>
-                              <ng-template ngbSlide>
-                                <img class="d-block" src="assets/img/bg4.jpg" alt="Third slide">
-                                <div class="carousel-caption d-none d-md-block">
+                                </div> -->
+                            </ng-template>
+                            <ng-template ngbSlide>
+                                <img class="d-block" src="assets/img/wallpaper3.jpg" alt="Third slide">
+                                <!-- <div class="carousel-caption d-none d-md-block">
                                     <h5>Yellowstone National Park, United States</h5>
-                                </div>
-                              </ng-template>
-                          </ngb-carousel>
-                        </div>
+                                </div> -->
+                            </ng-template>
+                        </ngb-carousel>
                     </div>
                 </div>
             </div>
-          </div>
+        </div>
+        <!-- </div>
         </div> -->
-  
+
         <!-- <div class="section section-nucleo-icons">
             <div class="container">
                 <div class="row">
@@ -348,55 +359,65 @@
                 </div>
             </div>
         </div> -->
-  
-        <div class="section section-signup" style="background-image: url('assets/img/bg11.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
+
+        <div class="section section-signup"
+            style="background-image: url('assets/img/bg11.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
             <div class="container login-page">
-              <div class="row">
-                <div class="col-md-4 content-center ml-auto mr-auto">
-                    <div class="card card-login card-plain">
-                        <form class="form" method="" action="">
-                            <div class="header header-primary text-center">
-                                <div class="logo-container">
-                                    <img src="assets/img/now-logo.png" alt="">
+                <div class="row">
+                    <div class="col-md-4 content-center ml-auto mr-auto">
+                        <div class="card card-login card-plain">
+                            <form class="form" method="" action="">
+                                <h1>LOGIN</h1>
+                                <div class="header header-primary text-center">
+                                    <div class="logo-container">
+                                        <!-- <img src="assets/img/now-logo.png" alt=""> -->
+                                        
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="content">
-                              <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
+                                <div class="content">
+                                    <div class="input-group form-group-no-border input-lg"
+                                        [ngClass]="{'input-group-focus':focus===true}">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"> <i
+                                                    class="now-ui-icons users_circle-08"></i></span>
+                                        </div>
+                                        <input type="text" class="form-control" placeholder="First Name..."
+                                            (focus)="focus=true" (blur)="focus=false">
+                                    </div>
+                                    <div class="input-group form-group-no-border input-lg"
+                                        [ngClass]="{'input-group-focus':focus1===true}">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i
+                                                    class="now-ui-icons text_caps-small"></i></span>
+                                        </div>
+                                        <input type="text" placeholder="Last Name..." class="form-control"
+                                            (focus)="focus1=true" (blur)="focus1=false" />
+                                    </div>
                                 </div>
-                                  <input type="text" class="form-control" placeholder="First Name..." (focus)="focus=true" (blur)="focus=false" >
-                              </div>
-                              <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
+                                <div class="footer text-center">
+                                    <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
                                 </div>
-                                  <input type="text" placeholder="Last Name..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
-                              </div>
-                            </div>
-                            <div class="footer text-center">
-                                <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
-                            </div>
-                            <div class="text-center">
-                                <h6>
-                                    <a href="#pablo" class="link">Create Account</a>
-                                </h6>
-                            </div>
-                            <div class="text-center">
-                                <h6>
-                                    <a href="#pablo" class="link">Need Help?</a>
-                                </h6>
-                            </div>
-                        </form>
+                                <div class="text-center">
+                                    <h6>
+                                        <a href="#pablo" class="link">Create Account</a>
+                                    </h6>
+                                </div>
+                                <div class="text-center">
+                                    <h6>
+                                        <a href="#pablo" class="link">Need Help?</a>
+                                    </h6>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-              </div>
                 <div class="col text-center">
-                    <a [routerLink]="['/examples/login']" class="btn btn-simple btn-round btn-white btn-lg">View Login Page</a>
+                    <a [routerLink]="['/examples/login']" class="btn btn-simple btn-round btn-white btn-lg">View Login
+                        Page</a>
                 </div>
             </div>
         </div>
-        <div class="section section-examples" data-background-color="black">
+        <!-- <div class="section section-examples" data-background-color="black">
             <div class="space-50"></div>
             <div class="container text-center">
                 <div class="row">
@@ -404,18 +425,20 @@
                         <a [routerLink]="['/examples/landing']">
                             <img src="assets/img/landing.jpg" alt="Image" class="img-raised">
                         </a>
-                        <a [routerLink]="['/examples/landing']" class="btn btn-simple btn-primary btn-round">View Landing Page</a>
+                        <a [routerLink]="['/examples/landing']" class="btn btn-simple btn-primary btn-round">View
+                            Landing Page</a>
                     </div>
                     <div class="col">
                         <a [routerLink]="['/examples/profile']">
                             <img src="assets/img/profile.jpg" alt="Image" class="img-raised">
                         </a>
-                        <a [routerLink]="['/examples/profile']" class="btn btn-simple btn-primary btn-round">View Profile Page</a>
+                        <a [routerLink]="['/examples/profile']" class="btn btn-simple btn-primary btn-round">View
+                            Profile Page</a>
                     </div>
                 </div>
             </div>
-        </div>
-  
+        </div> -->
+
         <!-- <div class="section section-download" id="#download-section" data-background-color="black">
             <div class="container">
                 <div class="row justify-content-md-center">
@@ -476,34 +499,24 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="https://www.creative-tim.com">
-                            Creative Tim
+                        <a [routerLink]="['/examples/contact']">
+                           Contact Us
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.creative-tim.com/about-us">
+                        <a [routerLink]="['/examples/about']">
                             About Us
                         </a>
                     </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md">
-                            MIT License
-                        </a>
-                    </li>
+                 
                 </ul>
             </nav>
             <div class="copyright">
                 &copy;
-              {{data | date: 'yyyy'}}, Designed by
-                <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+                {{data | date: 'yyyy'}}, Designed by
+                <!-- <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>. -->
             </div>
         </div>
     </footer>
-  </div>
-  
+</div>
