--- a/src/assets/sass/now-ui-kit/_navbar.scss
+++ b/src/assets/sass/now-ui-kit/_navbar.scss
@@ -43,7 +43,7 @@
 
         .nav-link:not(.btn){
             text-transform: uppercase;
-            font-size: $font-size-mini;
+            font-size: 16px;
             padding: $padding-base-vertical $padding-base-horizontal;
             line-height: $line-height-nav-link;
 
