--- a/src/app/examples/about/about.component.html
+++ b/src/app/examples/about/about.component.html
@@ -7,13 +7,13 @@
             <div class="content-center">
                 <h1 class="title">About Us</h1>
                 <div class="text-center">
-                    <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                    <a href=" " class="btn btn-primary btn-icon btn-round">
                         <i class="fab fa-facebook-square"></i>
                     </a>
-                    <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                    <a href=" " class="btn btn-primary btn-icon btn-round">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                    <a href=" " class="btn btn-primary btn-icon btn-round">
                         <i class="fab fa-google-plus"></i>
                     </a>
                 </div>
@@ -97,11 +97,11 @@
                                 give more details about what they do. Feel free to add some
                                 <a href="#">links</a> for people to be able to follow them outside the site.
                             </p>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-twitter"></i></a>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-instagram"></i></a>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-facebook-square"></i></a>
                         </div>
                     </div>
@@ -115,9 +115,9 @@
                                 give more details about what they do. Feel free to add some
                                 <a href="#">links</a> for people to be able to follow them outside the site.
                             </p>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-twitter"></i></a>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
@@ -131,11 +131,11 @@
                                 give more details about what they do. Feel free to add some
                                 <a href="#">links</a> for people to be able to follow them outside the site.
                             </p>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-google-plus"></i></a>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-youtube"></i></a>
-                            <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i
+                            <a href=" " class="btn btn-primary btn-icon btn-round"><i
                                     class="fab fa-twitter"></i></a>
                         </div>
                     </div>
