--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -23,7 +23,7 @@
     <div class="main">
 
         <div class="row m-0">
-            <div class="col-md-8 ml-auto mr-auto text-center"  style="margin-top: 3rem;">
+            <div class="col-md-8 ml-auto mr-auto text-center" style="margin-top: 3rem;">
                 <h2 class="title">ENGINEERED SPEED</h2>
                 <h5 class="description">
                     Balance, movement, muscular strength, coordination and agility through specific biomechanics
@@ -277,6 +277,9 @@
             
             </div>
              -->
+        <div class="container" style="display: flex; justify-content: center;">
+            <img width="100%" src="assets/img/month-view-in-angular-scheduler.png">
+        </div>
 
         <div class="section" id="carousel">
             <div class="container">
@@ -371,7 +374,7 @@
                                 <div class="header header-primary text-center">
                                     <div class="logo-container">
                                         <!-- <img src="assets/img/now-logo.png" alt=""> -->
-                                        
+
                                     </div>
                                 </div>
                                 <div class="content">
@@ -395,16 +398,16 @@
                                     </div>
                                 </div>
                                 <div class="footer text-center">
-                                    <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
+                                    <a href=" " class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
                                 </div>
                                 <div class="text-center">
                                     <h6>
-                                        <a href="#pablo" class="link">Create Account</a>
+                                        <a href=" " class="link">Create Account</a>
                                     </h6>
                                 </div>
                                 <div class="text-center">
                                     <h6>
-                                        <a href="#pablo" class="link">Need Help?</a>
+                                        <a href=" " class="link">Need Help?</a>
                                     </h6>
                                 </div>
                             </form>
@@ -500,7 +503,7 @@
                 <ul>
                     <li>
                         <a [routerLink]="['/examples/contact']">
-                           Contact Us
+                            Contact Us
                         </a>
                     </li>
                     <li>
@@ -508,7 +511,7 @@
                             About Us
                         </a>
                     </li>
-                 
+
                 </ul>
             </nav>
             <div class="copyright">
