--- a/src/app/examples/contact/contact.component.html
+++ b/src/app/examples/contact/contact.component.html
@@ -1,46 +1,56 @@
-
 <div class="wrapper">
     <div class="page-header page-header-small">
-        <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/wallpaper4.jpg');">
+        <div class="page-header-image rellax-header" data-rellax-speed="-8"
+            style="background-image: url('assets/img/wallpaper4.jpg');">
         </div>
         <div class="container">
             <div class="content-center">
                 <h1 class="title">Contact Us</h1>
                 <div class="text-center">
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                    <i class="fab fa-facebook-square"></i>
-                  </a>
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
-                    <i class="fab fa-google-plus"></i>
-                  </a>
+                    <a href="" class="btn btn-primary btn-icon btn-round">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a href="" class="btn btn-primary btn-icon btn-round">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="" class="btn btn-primary btn-icon btn-round">
+                        <i class="fab fa-google-plus"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section section-about-us">
-       <div class="container">
-        <form (ngSubmit)="submitForm()" #contactForm="ngForm">
-            <div>
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="name" [(ngModel)]="formData.name" required>
-            </div>
-            <div>
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" [(ngModel)]="formData.email" required>
-            </div>
-            <div>
-              <label for="message">Message:</label>
-              <textarea id="message" name="message" [(ngModel)]="formData.message" required></textarea>
-            </div>
-            <button type="submit">Submit</button>
-          </form>
-          
-       </div>
+    <div class="section">
+        <div class="container">
+            <h3>Amy Claggett</h3>
+            <div class="text-color">Phone: +1 (312) 933-5382</div>
+            <div class="text-color">Email: claggettpowerskatingacademy@gmail.com</div>
+        </div>
     </div>
- 
+
+    <div class="section section-about-us">
+        
+        <div class="container">
+            <h2 style="color: white;">Contact Form</h2>
+            <form (ngSubmit)="submitForm()" #contactForm="ngForm">
+                <div>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" [(ngModel)]="formData.name" required>
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" [(ngModel)]="formData.email" required>
+                </div>
+                <div>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" [(ngModel)]="formData.message" required></textarea>
+                </div>
+                <button type="submit">Submit</button>
+            </form>
+
+        </div>
+    </div>
+
 
     <footer class="footer footer-default">
         <div class="container">
@@ -77,4 +87,3 @@
         </div>
     </footer>
 </div>
-
