--- a/src/app/examples/contact/contact.component.scss
+++ b/src/app/examples/contact/contact.component.scss
@@ -1,6 +1,6 @@
 form {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 0;
   }
   
   label {
@@ -21,7 +21,7 @@ form {
   
   button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #a1a1a1;
     color: white;
     border: none;
     border-radius: 4px;
@@ -29,10 +29,15 @@ form {
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: transparent;
+    border: 1px solid #a1a1a1
   }
   .contact-page{
     margin-top:6rem;
     height: 100vh;
 
+  }
+  .text-color{
+    color: #fff;
+    font-size:16px;
   }
