--- a/src/app/examples/landing/landing.component.html
+++ b/src/app/examples/landing/landing.component.html
@@ -6,13 +6,13 @@
             <div class="content-center">
                 <h1 class="title">This is our great company.</h1>
                 <div class="text-center">
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                  <a href=" " class="btn btn-primary btn-icon btn-round">
                     <i class="fab fa-facebook-square"></i>
                   </a>
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                  <a href=" " class="btn btn-primary btn-icon btn-round">
                     <i class="fab fa-twitter"></i>
                   </a>
-                  <a href="#pablo" class="btn btn-primary btn-icon btn-round">
+                  <a href=" " class="btn btn-primary btn-icon btn-round">
                     <i class="fab fa-google-plus"></i>
                   </a>
                 </div>
@@ -70,9 +70,9 @@
                             <p class="category text-primary">Model</p>
                             <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
                                 <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-instagram"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-facebook-square"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-instagram"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-facebook-square"></i></a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -82,8 +82,8 @@
                             <p class="category text-primary">Designer</p>
                             <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
                                 <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-linkedin"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -93,9 +93,9 @@
                             <p class="category text-primary">Fashion</p>
                             <p class="description">You can write here details about one of your team members. You can give more details about what they do. Feel free to add some
                                 <a href="#">links</a> for people to be able to follow them outside the site.</p>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-google-plus"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-youtube"></i></a>
-                                <a href="#pablo" class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-google-plus"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-youtube"></i></a>
+                                <a href=" " class="btn btn-primary btn-icon btn-round"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                         <textarea class="form-control" name="name" rows="4" cols="80" placeholder="Type a message..."></textarea>
                     </div>
                     <div class="send-button">
-                        <a href="#pablo" class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
+                        <a href=" " class="btn btn-primary btn-round btn-block btn-lg">Send Message</a>
                     </div>
                 </div>
             </div>
