--- a/src/app/examples/login/login.component.html
+++ b/src/app/examples/login/login.component.html
@@ -25,16 +25,16 @@
                       </div>
                     </div>
                     <div class="footer text-center">
-                        <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
+                        <a href=" " class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
                     </div>
                     <div class="pull-left">
                         <h6>
-                            <a href="#pablo" class="link">Create Account</a>
+                            <a href=" " class="link">Create Account</a>
                         </h6>
                     </div>
                     <div class="pull-right">
                         <h6>
-                            <a href="#pablo" class="link">Need Help?</a>
+                            <a href=" " class="link">Need Help?</a>
                         </h6>
                     </div>
                 </form>
